Starting to work on tags
- Add a Tag model in core/models.py that tracks a single CharField
- Give the Content model a ManyToMany for Tags
- Update content.html to display the tags for given content somewhere

--- a/home/templates/home/content.html
+++ b/home/templates/home/content.html
@@ -61,7 +61,11 @@
         <br/>
     {% endif %}
 
-    <p>Tags: {# STUB_TAG #}</p>
+    <p>Tags:
+        {% for tag in content.tags %}
+            <span class="tag"> {{ tag.name }}</span>
+        {% endfor %}
+    </p>
 
     <hr/>
 
