--- a/home/templates/home/content/display.html
+++ b/home/templates/home/content/display.html
@@ -1,13 +1,16 @@
 <br/>
 <div class="content">
 {% if content %}
+  {% if not content.embed_only and content.embedding %}<a href="{% url "home:view_content" content.pk %}">{% endif %}
   {% include content.template %}
+  {% if not content.embed_only and content.embedding %}</a>{% endif %}
+
   {% if not content.hide_caption %}
     <p class="text-muted text-center"><small>{{ content.descriptor }}: {{ content.description }}</small></p>
   {% endif %}
   {% else %}
   <div class="alert alert-danger" role="alert">
-    <i class="fas fa-times-circle"></i><strong>Oh no!</strong> The content that's supposed to go here is missing or restricted.
+    <i class="fas fa-times-circle"></i> <strong>Oh no!</strong> The content that's supposed to go here is missing or restricted.
   </div>
 {% endif %}
 </div>
