--- a/home/static/home/styles/imports/_footer-styles.scss
+++ b/home/static/home/styles/imports/_footer-styles.scss
@@ -25,6 +25,7 @@
         .footer-logo {
             padding: 0;
             margin: 0;
+            color: $site-white;
             span {color: $site-red;}
         }
     }
