--- a/home/static/home/styles/imports/_navbar-styles.scss
+++ b/home/static/home/styles/imports/_navbar-styles.scss
@@ -70,41 +70,71 @@
         text-decoration: none;
         cursor: pointer;
     }
+    &:active, &:focus {
+        outline: 0;
+        border: none;
+        -moz-outline-style: none;
+    }
 }
+//SEARCH MODAL
 #searchModal {
     .modal-dialog {
         position: fixed;
-        top: 30%;
-        left: 50%;
-        transform: translate(-50%, -35%);
-
+        margin: 0;
         width: 100%;
+        height: 100%;
+        padding: 0;
+        max-width: 100%;
     }
     .modal-content {
-        background: $site-background;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
         border-radius: 0;
+        box-shadow: none;
+    }
+    .modal-body {
+        position: absolute;
+        width: 100%;
+        font-weight: 300;
+        overflow: auto;
+    }
+    #modal-close-btn {
+        position: absolute;
+        right: 0;
+        margin: 2rem;
+
+        border: none;
+        background: none;
+        cursor: pointer;
+
+        font-size: 2rem;
+        color: $site-red;
     }
     .modal-search-form {
+        position: relative;
+        width: 75%;
+        margin-top: 25%;
+        margin-right: auto;
+        margin-left: auto;
         .modal-search-input {
-            float: left;
-
-            width: 100%;
+            display: inline-block;
+            width: calc(100% - 50px);
             height: 20px;
-            padding: 20px;
             border: 3px solid $site-red;
-            outline: none;
+            padding: 20px;
 
-            letter-spacing: 0.125rem;
-
-            background: transparent;
-            &:focus {color: $site-red;}
+            &:focus {
+                outline: none;
+                color: $site-red;
+            }
         }
         .modal-search-submit {
             position: absolute;
-            right: 15px;
-            z-index: 1;
+            right: 0;
             display: inline-block;
-
             width: 50px;
             height: 46px;
             border: 1px solid $site-red;
