--- a/home/templates/home/includes/navbar.html
+++ b/home/templates/home/includes/navbar.html
@@ -41,6 +41,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-body">
+                <button type="button" id="modal-close-btn" class="fas fa-times"></button>
                 <form class="modal-search-form">
                     <input class="modal-search-input" type="search" placeholder="Search...">
                     <button class="modal-search-submit" type="submit">
@@ -57,4 +58,8 @@
 var opt = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
 var d = new Date();
 document.getElementById("date").innerHTML = d.toLocaleDateString("en-US", opt);
+
+$("#modal-close-btn").on("click", function() {
+    $("#searchModal").modal("hide");
+});
 </script>
