solid feature images

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,7 +10,7 @@
             <hr class="my-4" />
             <div class="row featured mb-5">
                 <div class="col-md-6 featured-col">
-                    <img class="img-fluid mx-auto featured-img" style="display:block" src="{% static 'home/images/img_5.jpg' %}" alt="">
+                    <img class="img-fluid mx-auto featured-img d-block" src="{% static 'home/images/img_5.jpg' %}" alt="">
                     <div class="featured-content text-center ml-3">
                         <a class="featured-title" href="#">Featured Story Title</a>
                         <p class="featured-info">
@@ -20,7 +20,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 featured-col">
-                    <img class="img-fluid mx-auto featured-img" style="display:block" src="{% static 'home/images/img_5.jpg' %}" alt="">
+                    <img class="img-fluid mx-auto featured-img d-block" src="{% static 'home/images/img_5.jpg' %}" alt="">
                     <div class="featured-content text-center ml-3">
                         <a class="featured-title" href="#">Featured Story Title</a>
                         <p class="featured-info">
