add mb-2 to all headers in /about

--- a/home/templates/home/about/about.html
+++ b/home/templates/home/about/about.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-    <h2>About Us</h2>
+    <h2 class="mb-2">About Us</h2>
 
     <p>Silver Chips Online is an independent student newspaper of Montgomery Blair High School
         (<a href="http://www.mbhs.edu">www.mbhs.edu</a>) in Silver Spring, Maryland.
@@ -16,7 +16,7 @@
         please visit <a href="http://silverchips.mbhs.edu/staff">this</a> page.
     </p><br/>
 
-    <h3>Philosophy</h3>
+    <h3 class="mb-2">Philosophy</h3>
     <p>Silver Chips Online (SCO) is dedicated to representing, defending,
         informing and entertaining the Blair community.
         SCO publishes all newsworthy stories that pertain to the Blair community as well as seeks letters to the editor.
@@ -32,7 +32,7 @@
     turned in on deadlines regardless of circumstances.
     </p><br/>
 
-    <h3>History</h3><p>
+    <h3 class="mb-2">History</h3><p>
 
     Silver Chips Online was founded by Dan Zytnick during the 1998-1999 school year as an
     online list of Silver Chips print edition stories, though "online only" news and sports
@@ -112,7 +112,7 @@
     to report on all Blair events and other information of interest to the Blair community.</p>
     <br/>
 
-    <h3>Contact Us</h3>
+    <h3 class="mb-2">Contact Us</h3>
     <p>
     To send general comments, please use our <a href="/contact">form</a><br/>
         Montgomery Blair High School<br/>
