--- a/home/templates/home/about/about.html
+++ b/home/templates/home/about/about.html
@@ -3,25 +3,23 @@
 {% block title %}About Us{% endblock %}
 
 {% block content %}
+  <h2>About Us</h2>
 
+  <p>Silver Chips Online is an independent student newspaper of Montgomery Blair High School
+    (<a href="http://www.mbhs.edu">www.mbhs.edu</a>) in Silver Spring, Maryland.
+    Silver Chips Online is run entirely by students and works closely with print counterpart Silver Chips.
+    Silver Chips Online, Silver Chips and individual staff members have won numerous awards,
+    many of them at the national level. Student editors make all content decisions.
+    Silver Chips Online is a forum for community expression. For more information on our writers and other staff,
+    please visit our <a href="http://silverchips.mbhs.edu/staff">staff page</a>.
+  </p>
 
-    <h2>About Us</h2>
-
-    <p>Silver Chips Online is an independent student newspaper of Montgomery Blair High School
-        (<a href="http://www.mbhs.edu">www.mbhs.edu</a>) in Silver Spring, Maryland.
-        Silver Chips Online is run entirely by students and works closely with print counterpart Silver Chips.
-        Silver Chips Online, Silver Chips and individual staff members have won numerous awards,
-        many of them at the national level. Student editors make all content decisions.
-        Silver Chips Online is a forum for community expression. For more information on our writers,
-        please visit <a href="http://silverchips.mbhs.edu/staff">this</a> page.
-    </p><br/>
-
-    <h3>Philosophy</h3>
-    <p>Silver Chips Online (SCO) is dedicated to representing, defending,
-        informing and entertaining the Blair community.
-        SCO publishes all newsworthy stories that pertain to the Blair community as well as seeks letters to the editor.
-        SCO provides a forum for student expression and strives to represent Blair's vast diversity in the content of its paper.
-    </p><p>
+  <h3>Philosophy</h3>
+  <p>Silver Chips Online (SCO) is dedicated to representing, defending,
+    informing and entertaining the Blair community.
+    SCO publishes all newsworthy stories that pertain to the Blair community as well as seeks letters to the editor.
+    SCO provides a forum for student expression and strives to represent Blair's vast diversity in the content of its paper.
+  </p><p>
     Silver Chips Online strictly follows its mottos of nullae morae (no delays) and nullae
     rationales (no excuses).  No delays. SCO is accessible to readers at all times.
     SCO staff is always there to report on whatever happens, as it happens. Without
@@ -30,14 +28,14 @@
     on deadlines.  If deadlines are not met, chaos ensues.  To avoid chaos and to
     create a good paper, deadlines are absolute.  Stories and other work must be
     turned in on deadlines regardless of circumstances.
-    </p><br/>
+  </p>
 
-    <h3>History</h3><p>
-
+  <h3>History</h3>
+  <p>
     Silver Chips Online was founded by Dan Zytnick during the 1998-1999 school year as an
     online list of Silver Chips print edition stories, though "online only" news and sports
-    stories and web-updates became common soon after.</p><p>
-
+    stories and web-updates became common soon after.
+  </p><p>
     Since its inaugural year, Silver Chips Online has greatly expanded its staff and mission.
     In the 2000-2001 school year, under Editor-in-Chief Daina Klimanis, Silver Chips
     Online had six staff members and began writing more of its own stories instead of simply
@@ -45,8 +43,8 @@
     during the 2001-2002 school year, the site received a major redesign and began to
     produce many more "Online Only" stories. In 2002-2003, Silver Chips Online, headed
     by Editors-in-Chief Kevin Chang and Jeanne Yang, added a large number of new
-    reporters and the content of the site became dominated by "Online Only" stories.</p><p>
-
+    reporters and the content of the site became dominated by "Online Only" stories.
+  </p><p>
     Editors-in-Chief Branden Buehler and KC Constanzo led Silver Chips Online in
     launching a new site design during the 2003-2004 school year. That year, Silver Chips
     Online was given the National Scholastic Press Association (NSPA) Pacemaker award, an
@@ -55,20 +53,20 @@
     Hernandez, attended the NSPA Conference in San Diego, California, that year to receive
     the award. The site was also given the 2004 Marylander Award by the Maryland-DC
     Scholastic Press Association.
-    </p><p>
+  </p><p>
     During the next school year, Silver Chips Online doubled in size to a staff of 45 writers
     and editors. That year brought an expansion of site features, including the College
     section, the Foreign Desk section, the Ask Chips column and numerous site specials,
     such as Homecoming and Election 2004 coverage. Under the leadership of Editors-in-
     Chief, Vivek Chellappa, Allison Elvove, Ely Portillo and Katherine Zhang and Technical
     Director Jeffrey Dunn, the site was once more awarded a Pacemaker.
-    </p><p>
+  </p><p>
     The following year brought another Pacemaker award under Editors-in-Chief
     Christopher Consolino, Jeremy Goodman, Grace Harter and Alex Mazerov and Technical
     Director Erik Li. The site expanded to include a Food section and Back Page, and
     continued to provide excellent coverage of local events – including President Bush's
     2005 visit to Montgomery Blair. The site won the 2006 Marylander award as well.
-    </p><p>
+  </p><p>
     Online Managing Editors Meaghan Mallari and Tasha Prados created an Online
     Spanish Section during the 2006-2007 school year to further diversify the site. In addition to serving
     as the Editors-in-Chief of the Silver Chips Online Spanish Section they wrote the Spanish page for the Print edition. In Spring
@@ -76,68 +74,62 @@
     5 Silver Chips Online, 2012-2013 subscribers. That same year, Silver Chips Online became a part of Google News and
     attracted attention from local media for its coverage of the controversial color-coded ID
     policy that had been implemented and was again awarded the Marylander award.
-    </p><p>
+  </p><p>
     In the 2007-2008 school year, Editors-in-Chief Priyanka Gokhale, Pia Nargundkar and
     Rachita Sood and Technical Director David Dunn launched a complete site redesign,
     adding a 3-0-1 weekend section and Blair Connection to the website. The site was given
     the Marylander Award that year and the next, under Editors-in-Chief Sophie Schwadron
     and Kiera Zitelman. 2009 also saw the introduction of various specials, such as Blair
     Pair, Obama's First 100 Days and coverage of the March Madness and the Super Bowl.
-    </p><p>
+  </p><p>
     In 2009-2010, Editors-in-Chief Deepa Chellappa and David Tao and Technical Director
     Wylie Conlon redesigned the site in the fall of 2009, building a new logo and stylesheets.
-    </p><p>
+  </p><p>
     In the 2010-2011 school year, with only five senior editors on board, Editor-in-Chief
     Ava Wallace maintained the site and created a Twitter account, jumpstarting the site's
     presence in the social media world. The following year, Editors-in-Chiefs Melodi Anahtar
     and Marjorie Fuchs continued this trend by creating a Facebook page for the site.
-    </p><p>
+  </p><p>
     Brittany Cheng and Langston Taylor served as co-Editor-in-Chiefs during the 2012-2013
     school year. During their tenure, Cheng and Taylor redesigned the front page, incorporated
     live tweeting into SCO's repertoire, added Print Archives to the site via Issuu, and expanded
     the SCO's use of multimedia elements by teaming up with Blair Network Communications to
     produce video pieces. In the process, SCO won the 2013 Columbia Scholastic Press Association
     (CSPA) Gold Crown Award in the Hybrid category.
-    </p>
-    <p>Aanchal Johri and Jack Estrin served as co-Editor-in-Chiefs during the 2013-2014
-        school year. During their tenure, Silver Chips Online was the only high school
-        newspaper invited to cover the State of Science, Technology, Engineering and
-        Mathematics Address. Johri and Photo Staff Editor Emma Howells represented Silver
-        Chips Online at the White House for this event.</p>
-    <p>
+  </p><p>
+    Aanchal Johri and Jack Estrin served as co-Editor-in-Chiefs during the 2013-2014
+    school year. During their tenure, Silver Chips Online was the only high school
+    newspaper invited to cover the State of Science, Technology, Engineering and
+    Mathematics Address. Johri and Photo Staff Editor Emma Howells represented Silver
+    Chips Online at the White House for this event.
+  </p><p>
     Some of the current products of Silver Chips Online include a new site design (to be
     released soon), an extensive social media campaign, expanded blog categories, and a
     #Blazers section. With continued coverage of the school and its surrounding area, the
     paper continues to uphold its rank as one of the best in the nation and increase its ability
-    to report on all Blair events and other information of interest to the Blair community.</p>
-    <br/>
+    to report on all Blair events and other information of interest to the Blair community.
+  </p>
 
-    <h3>Contact Us</h3>
-    <p>
-    To send general comments, please use our <a href="/contact">form</a><br/>
-        Montgomery Blair High School<br/>
-    51 University Boulevard East<br/>
+  <h3>Contact Us</h3>
+  <h5>Mail</h5>
+  Montgomery Blair High School<br/>
+  51 University Boulevard East<br/>
+  Silver Spring, MD 20901-2451
 
-    Silver Spring, MD 20901-2451<p>
+  <h5>Email</h5>
+  <p>
+    The Silver Chips Online editors can be reached at <a href="mailto:editors.sco@gmail.com">editors.sco@gmail.com</a>.
+    Our staff sponsor, Michelle Ellie, can be reached at
+    <a href="mailto:Michelle_L_Edwards@mcpsmd.org">Michelle_L_Edwards@mcpsmd.org</a>.
+  </p>
 
-    E-mail addresses:<br/>
-    Silver Chips Online: <a
-    href="mailto:editors.sco@gmail.com">editors.sco@gmail.com</a><br/>
+  <p>The current editors-in-chief can also be reached individually at:</p>
 
+  <ul>
+  {% for eic in eics %}
+    <li>{{ eic.get_full_name }} &mdash; <a href="mailto:{{ eic.email }}">{{ eic.email }}</a></li>
+  {% endfor %}
+  </ul>
 
-    <b>Silver Chips Online Sponsor</b>:<br/>
-
-    Michelle Edwards - <a href="mailto:Michelle_L_Edwards@mcpsmd.org">Michelle_L_Edwards@mcpsmd.org</a><br/>
-
-    Phone - 301-649-2856
-    <br/><br/>
-
-    <b>Silver Chips Online Editors-in-Chief</b>:
-    {% for eic in eics %}
-        <br> <a href ="{% url 'home:view_profile' eic.profile.pk %}"> {{ eic.get_full_name }} </a> - {{ eic.email }} <br/>
-    {% endfor %}<br/>
-
-
-    To contact other staff members individually, go to our <a href="{% url 'home:about:staff' %}">staff page</a>.<br/>
-
+  <p>To contact other staff members individually, please visit our <a href="{% url 'home:about:staff' %}">staff page</a>.</p>
 {% endblock content %}
