--- a/home/templates/home/about/staff.html
+++ b/home/templates/home/about/staff.html
@@ -2,18 +2,25 @@
 
 {% block title %}Staff{% endblock %}
 
-
 {% block content %}
+  <h1>SilverChips Online Staff</h1>
 
-    <h1>SilverChips Online Staff</h1>
-    <br/>
+  <ul>
+    {% for user in active_users %}
+      <li>
+        <a href="{% url 'home:view_profile' user.profile.pk %}"> {{ user.get_full_name }}</a>, {{ user.profile.position }}
+        {% if user.email %}&mdash; <a href="mailto:{{ user.email }}">{{ user.email }}</a>{% endif %}
+      </li>
+    {% endfor %}
+  </ul>
 
-    <div>
-        <ul>
-            {% for user in users %}
-                <li><a href="{% url 'home:view_profile' user.profile.pk %}"> {{ user.get_full_name }} </a>, {{ user.profile.position }}</li>
-            {% endfor %}
-
-        </ul>
-    </div>
+  <h3>Past Staff</h3>
+  <ul>
+    {% for user in inactive_users %}
+      <li>
+        <a href="{% url 'home:view_profile' user.profile.pk %}"> {{ user.get_full_name }}</a>, {{ user.profile.position }}
+        (graduated {{ user.profile.graduation_year }})
+      </li>
+    {% endfor %}
+  </ul>
 {% endblock %}
