--- a/home/templates/home/includes/footer.html
+++ b/home/templates/home/includes/footer.html
@@ -1,42 +1,44 @@
 <footer class="site-footer-wrapper">
-    <div class="site-footer-expand">
-        <div class="site-footer-left">
-            <h4 class="footer-logo">Silver<span>Chips</span> Online</h4>
-            <p class="mt-4">
-                {% for section in section_roots %}
-                    <a class="footer-link" href="{% url 'home:view_section' section.name %}">{{ section.title }}</a> {% if not forloop.last %} &middot; {% endif %}
-                {% endfor %}
-            </p>
-            <p class="copyright">Content &copy; 2001-2018, Website &copy; 2016-2018 SilverChips Online</p>
-        </div>
-        <div class="site-footer-center">
-            <div>
-    			<i class="fa fa-map-marker"></i>
-    			<p><span>51 University Blvd. E.</span> Silver Spring, Maryland</p>
-    		</div>
-    		<div>
-    			<i class="fa fa-phone"></i>
-    			<p>(301) 649-2856</p>
-    		</div>
-    		<div>
-    			<i class="fa fa-envelope"></i>
-                <p>editors.sco@gmail.com</p>
-    		</div>
-        </div>
-        <div class="site-footer-right">
-            <p class="footer-company-about">
-    			<span>About us</span>
-    			SilverChips Online is the online version of SilverChips, the award-winning newspaper published by students from Montgomery
-                Blair High School in Silver Spring, Maryland.
-    		</p>
-            <div class="footer-icons">
-                <a target="_blank" href="https://twitter.com/mbhsSCO?lang=en"><i class="fab fa-twitter"></i></a>
-    			<a target="_blank" href="https://www.youtube.com/channel/UChQKJ8Jyaw6tgZUWha6SFSg"><i class="fab fa-youtube"></i></a>
-                <a target="_blank" href="https://www.facebook.com/SilverChipsOnline/"><i class="fab fa-facebook"></i></a>
-    		</div>
-            <p class="mt-4">
-                <a class="footer-link" href="{% url 'staff:login' %}">LOGIN</a> {% if not forloop.last %} &middot; {% endif %}
-            </p>
-        </div>
+  <div class="site-footer-expand">
+    <div class="site-footer-left">
+      <h4 class="footer-logo">Silver<span>Chips</span> Online</h4>
+      <p class="mt-4">
+        {% for section in section_roots %}
+          <a class="footer-link" href="{% url 'home:view_section' section.name %}">{{ section.title }}</a> {% if not forloop.last %} &middot; {% endif %}
+        {% endfor %}
+      </p>
+      <p class="copyright">Content &copy; 2001-2018, Website &copy; 2016-2018 SilverChips Online</p>
     </div>
+    <div class="site-footer-center">
+      <div>
+        <i class="fa fa-map-marker"></i>
+        <p><span>51 University Blvd. E.</span> Silver Spring, Maryland</p>
+      </div>
+      <div>
+        <i class="fa fa-phone"></i>
+        <p>(301) 649-2856</p>
+      </div>
+      <div>
+        <i class="fa fa-envelope"></i>
+        <p>editors.sco@gmail.com</p>
+      </div>
+    </div>
+    <div class="site-footer-right">
+      <p class="footer-company-about">
+        <span>About us</span>
+        SilverChips Online is the online version of SilverChips, the award-winning newspaper published by students from Montgomery
+        Blair High School in Silver Spring, Maryland.
+      </p>
+      <div class="footer-icons">
+        <a target="_blank" href="https://twitter.com/mbhsSCO?lang=en"><i class="fab fa-twitter"></i></a>
+        <a target="_blank" href="https://www.youtube.com/channel/UChQKJ8Jyaw6tgZUWha6SFSg"><i class="fab fa-youtube"></i></a>
+        <a target="_blank" href="https://www.facebook.com/SilverChipsOnline/"><i class="fab fa-facebook"></i></a>
+      </div>
+      <p class="mt-4">
+        <a class="footer-link" href="{% url 'home:about:index' %}">ABOUT US</a>&middot;
+        <a class="footer-link" href="{% url 'home:about:staff' %}">STAFF</a>&middot;
+        <a class="footer-link" href="{% url 'staff:login' %}">LOGIN</a>
+      </p>
+    </div>
+  </div>
 </footer>
