--- a/home/templates/home/includes/navbar.html
+++ b/home/templates/home/includes/navbar.html
@@ -30,7 +30,7 @@
                   </li>
                 {% endfor %}
                 <li id="search" class="nav-item d-lg-none">
-                  <button type="button" class="py-2 w-100 s-0" data-toggle="modal" data-target="#searchModal"><i class="fa fa-search"></i></button>
+                  <button type="button" class="py-2 w-100 s-0" data-toggle="modal" data-target="#searchModal">Search <i class="fa fa-search"></i></button>
                 </li>
             </ul>
         </div>
